Fix sizing bug of home page on mobile devices

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -106,6 +106,7 @@
 }
 
 .mergeContainer {
+  position: relative;
   min-width: 440px;
 }
 
